RESOLVED FIXED266644
[UnifiedPDF] Scrollbars don't show
https://bugs.webkit.org/show_bug.cgi?id=266644
Summary [UnifiedPDF] Scrollbars don't show
Simon Fraser (smfr)
Reported 2023-12-19 10:21:03 PST
Need to make scrollbar layers.
Attachments
Simon Fraser (smfr)
Comment 1 2023-12-19 10:21:16 PST
Simon Fraser (smfr)
Comment 2 2023-12-19 10:23:44 PST
EWS
Comment 3 2023-12-20 08:38:11 PST
Committed 272350@main (55195d817a86): <https://commits.webkit.org/272350@main> Reviewed commits have been landed. Closing PR #22043 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.