Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm
@@ -53,6 +53,7 @@
 #include <WebCore/RenderLayerBacking.h>
 #include <WebCore/RenderLayerCompositor.h>
 #include <WebCore/ScrollTypes.h>
+#include <WebCore/ScrollbarTheme.h>
 #include <pal/spi/cg/CoreGraphicsSPI.h>
 
 #include "PDFKitSoftLink.h"
@@ -138,7 +139,7 @@ void UnifiedPDFPlugin::scheduleRenderingUpdate()
     page->scheduleRenderingUpdate(RenderingUpdateStep::LayerFlush);
 }
 
-void UnifiedPDFPlugin::updateLayerHierarchy()
+void UnifiedPDFPlugin::ensureLayers()
 {
     RefPtr page = this->page();
     if (!page)
@@ -151,6 +152,7 @@ void UnifiedPDFPlugin::updateLayerHierarchy()
             m_rootLayer->setAppliesPageScale();
     }
 
+
     if (!m_scrollContainerLayer) {
         m_scrollContainerLayer = createGraphicsLayer("UnifiedPDFPlugin scroll container"_s, GraphicsLayer::Type::ScrollContainer);
         m_scrollContainerLayer->setAnchorPoint({ });
@@ -161,7 +163,6 @@ void UnifiedPDFPlugin::updateLayerHierarchy()
     if (!m_scrolledContentsLayer) {
         m_scrolledContentsLayer = createGraphicsLayer("UnifiedPDFPlugin scrolled contents"_s, GraphicsLayer::Type::ScrolledContents);
         m_scrolledContentsLayer->setAnchorPoint({ });
-        m_scrolledContentsLayer->setDrawsContent(true);
         m_scrollContainerLayer->addChild(*m_scrolledContentsLayer);
     }
 
@@ -170,6 +171,12 @@ void UnifiedPDFPlugin::updateLayerHierarchy()
         m_contentsLayer->setAnchorPoint({ });
         m_contentsLayer->setDrawsContent(true);
         m_scrolledContentsLayer->addChild(*m_contentsLayer);
+    }
+
+    if (!m_overflowControlsContainer) {
+        m_overflowControlsContainer = createGraphicsLayer("UnifiedPDFPlugin overflow controls container"_s, GraphicsLayer::Type::Normal);
+        m_overflowControlsContainer->setAnchorPoint({ });
+        m_rootLayer->addChild(*m_overflowControlsContainer);
     }
 
     RefPtr scrollingCoordinator = page->scrollingCoordinator();
@@ -190,8 +197,17 @@ void UnifiedPDFPlugin::updateLayerHierarchy()
 
         scrollingCoordinator->setNodeLayers(m_scrollingNodeID, nodeLayers);
     }
+}
 
-    m_scrollContainerLayer->setSize(size());
+void UnifiedPDFPlugin::updateLayerHierarchy()
+{
+    ensureLayers();
+
+    m_overflowControlsContainer->setSize(size());
+
+    auto scrollContainerRect = availableContentsRect();
+    m_scrollContainerLayer->setPosition(scrollContainerRect.location());
+    m_scrollContainerLayer->setSize(scrollContainerRect.size());
 
     m_contentsLayer->setSize(contentsSize());
     m_contentsLayer->setNeedsDisplay();
@@ -205,9 +221,11 @@ void UnifiedPDFPlugin::didChangeSettings()
     RefPtr page = this->page();
     if (!page)
         return;
+
     Settings& settings = page->settings();
     bool showDebugBorders = settings.showDebugBorders();
     bool showRepaintCounter = settings.showRepaintCounter();
+
     auto propagateSettingsToLayer = [&] (GraphicsLayer& layer) {
         layer.setShowDebugBorder(showDebugBorders);
         layer.setShowRepaintCounter(showRepaintCounter);
@@ -216,6 +234,15 @@ void UnifiedPDFPlugin::didChangeSettings()
     propagateSettingsToLayer(*m_scrollContainerLayer);
     propagateSettingsToLayer(*m_scrolledContentsLayer);
     propagateSettingsToLayer(*m_contentsLayer);
+
+    if (m_layerForHorizontalScrollbar)
+        propagateSettingsToLayer(*m_layerForHorizontalScrollbar);
+
+    if (m_layerForVerticalScrollbar)
+        propagateSettingsToLayer(*m_layerForVerticalScrollbar);
+
+    if (m_layerForScrollCorner)
+        propagateSettingsToLayer(*m_layerForScrollCorner);
 }
 
 void UnifiedPDFPlugin::notifyFlushRequired(const GraphicsLayer*)
@@ -244,6 +271,36 @@ void UnifiedPDFPlugin::paint(WebCore::GraphicsContext& context, const WebCore::I
 
 void UnifiedPDFPlugin::paintContents(const GraphicsLayer* layer, GraphicsContext& context, const FloatRect& clipRect, OptionSet<GraphicsLayerPaintBehavior>)
 {
+    // This scrollbar painting code is used in the non-UI-side compositing configuration.
+    auto paintScrollbar = [](Scrollbar* scrollbar, GraphicsContext& context) {
+        if (!scrollbar)
+            return;
+
+        GraphicsContextStateSaver stateSaver(context);
+        auto scrollbarRect = scrollbar->frameRect();
+        context.translate(-scrollbarRect.location());
+        scrollbar->paint(context, scrollbarRect);
+    };
+
+    if (layer == layerForHorizontalScrollbar()) {
+        paintScrollbar(m_horizontalScrollbar.get(), context);
+        return;
+    }
+
+    if (layer == layerForVerticalScrollbar()) {
+        paintScrollbar(m_verticalScrollbar.get(), context);
+        return;
+    }
+
+    if (layer == layerForScrollCorner()) {
+        auto cornerRect = viewRelativeScrollCornerRect();
+
+        GraphicsContextStateSaver stateSaver(context);
+        context.translate(-cornerRect.location());
+        ScrollbarTheme::theme().paintScrollCorner(*this, context, cornerRect);
+        return;
+    }
+
     if (layer != m_contentsLayer.get())
         return;
 
@@ -376,11 +433,43 @@ void UnifiedPDFPlugin::geometryDidChange(const IntSize& pluginSize, const Affine
     updateLayout();
 }
 
+IntRect UnifiedPDFPlugin::availableContentsRect() const
+{
+    auto availableRect = IntRect({ }, size());
+    if (ScrollbarTheme::theme().usesOverlayScrollbars())
+        return availableRect;
+
+    int verticalScrollbarSpace = 0;
+    if (m_verticalScrollbar)
+        verticalScrollbarSpace = m_verticalScrollbar->width();
+
+    int horizontalScrollbarSpace = 0;
+    if (m_horizontalScrollbar)
+        horizontalScrollbarSpace = m_horizontalScrollbar->height();
+
+    availableRect.contract(verticalScrollbarSpace, horizontalScrollbarSpace);
+
+    // Don't allow negative sizes
+    availableRect.setWidth(std::max(0, availableRect.width()));
+    availableRect.setHeight(std::max(0, availableRect.height()));
+
+    return availableRect;
+}
+
 void UnifiedPDFPlugin::updateLayout()
 {
-    m_documentLayout.updateLayout(size());
-    updateLayerHierarchy();
+    auto layoutSize = availableContentsRect().size();
+    m_documentLayout.updateLayout(layoutSize);
     updateScrollbars();
+
+    // Do a second layout pass if the first one changed scrollbars.
+    auto newLayoutSize = availableContentsRect().size();
+    if (layoutSize != newLayoutSize) {
+        m_documentLayout.updateLayout(newLayoutSize);
+        updateScrollbars();
+    }
+
+    updateLayerHierarchy();
     updateScrollingExtents();
 }
 
@@ -433,12 +522,152 @@ void UnifiedPDFPlugin::didChangeScrollOffset()
     scheduleRenderingUpdate();
 }
 
-void UnifiedPDFPlugin::invalidateScrollbarRect(WebCore::Scrollbar&, const WebCore::IntRect&)
+bool UnifiedPDFPlugin::updateOverflowControlsLayers(bool needsHorizontalScrollbarLayer, bool needsVerticalScrollbarLayer, bool needsScrollCornerLayer)
 {
+    if (scrollingMode() == DelegatedScrollingMode::DelegatedToNativeScrollView)
+        return false;
+
+    RefPtr page = this->page();
+    if (!page)
+        return false;
+
+    auto createOrDestroyLayer = [&](RefPtr<GraphicsLayer>& layer, bool needLayer, ASCIILiteral layerName) {
+        if (needLayer == !!layer)
+            return false;
+
+        if (needLayer) {
+            layer = createGraphicsLayer(layerName, GraphicsLayer::Type::Normal);
+            layer->setAllowsBackingStoreDetaching(false);
+            layer->setAllowsTiling(false);
+            layer->setDrawsContent(true);
+
+#if ENABLE(SCROLLING_THREAD)
+            layer->setScrollingNodeID(m_scrollingNodeID);
+#endif
+
+            m_overflowControlsContainer->addChild(*layer);
+        } else
+            GraphicsLayer::unparentAndClear(layer);
+
+        return true;
+    };
+
+    ensureLayers();
+
+    bool layersChanged = false;
+
+    bool horizontalScrollbarLayerChanged = createOrDestroyLayer(m_layerForHorizontalScrollbar, needsHorizontalScrollbarLayer, "horizontal scrollbar"_s);
+    layersChanged |= horizontalScrollbarLayerChanged;
+
+    bool verticalScrollbarLayerChanged = createOrDestroyLayer(m_layerForVerticalScrollbar, needsVerticalScrollbarLayer, "vertical scrollbar"_s);
+    layersChanged |= verticalScrollbarLayerChanged;
+
+    layersChanged |= createOrDestroyLayer(m_layerForScrollCorner, needsScrollCornerLayer, "scroll corner"_s);
+
+    auto& scrollingCoordinator = *page->scrollingCoordinator();
+    if (horizontalScrollbarLayerChanged)
+        scrollingCoordinator.scrollableAreaScrollbarLayerDidChange(*this, ScrollbarOrientation::Horizontal);
+    if (verticalScrollbarLayerChanged)
+        scrollingCoordinator.scrollableAreaScrollbarLayerDidChange(*this, ScrollbarOrientation::Vertical);
+
+    return layersChanged;
 }
 
-void UnifiedPDFPlugin::invalidateScrollCornerRect(const WebCore::IntRect&)
+void UnifiedPDFPlugin::positionOverflowControlsLayers()
 {
+    auto overflowControlsPositioningRect = IntRect({ }, size());
+
+    auto positionScrollbarLayer = [](GraphicsLayer& layer, const IntRect& scrollbarRect) {
+        layer.setPosition(scrollbarRect.location());
+        layer.setSize(scrollbarRect.size());
+    };
+
+    if (auto* layer = layerForHorizontalScrollbar())
+        positionScrollbarLayer(*layer, viewRelativeHorizontalScrollbarRect());
+
+    if (auto* layer = layerForVerticalScrollbar())
+        positionScrollbarLayer(*layer, viewRelativeVerticalScrollbarRect());
+
+    if (auto* layer = layerForScrollCorner()) {
+        auto cornerRect = viewRelativeScrollCornerRect();
+        layer->setPosition(cornerRect.location());
+        layer->setSize(cornerRect.size());
+        layer->setDrawsContent(!cornerRect.isEmpty());
+    }
+}
+
+void UnifiedPDFPlugin::invalidateScrollbarRect(WebCore::Scrollbar& scrollbar, const WebCore::IntRect& rect)
+{
+    if (&scrollbar == m_verticalScrollbar.get()) {
+        if (auto* layer = layerForVerticalScrollbar()) {
+            layer->setNeedsDisplayInRect(rect);
+            return;
+        }
+
+        return;
+    }
+
+    if (&scrollbar == m_horizontalScrollbar.get()) {
+        if (auto* layer = layerForHorizontalScrollbar()) {
+            layer->setNeedsDisplayInRect(rect);
+            return;
+        }
+        return;
+    }
+}
+
+void UnifiedPDFPlugin::invalidateScrollCornerRect(const WebCore::IntRect& rect)
+{
+    if (auto* layer = layerForScrollCorner()) {
+        layer->setNeedsDisplayInRect(rect);
+        return;
+    }
+}
+
+GraphicsLayer* UnifiedPDFPlugin::layerForHorizontalScrollbar() const
+{
+    return m_layerForHorizontalScrollbar.get();
+}
+
+GraphicsLayer* UnifiedPDFPlugin::layerForVerticalScrollbar() const
+{
+    return m_layerForVerticalScrollbar.get();
+}
+
+GraphicsLayer* UnifiedPDFPlugin::layerForScrollCorner() const
+{
+    return m_layerForScrollCorner.get();
+}
+
+DelegatedScrollingMode UnifiedPDFPlugin::scrollingMode() const
+{
+#if PLATFORM(IOS_FAMILY)
+    return DelegatedScrollingMode::DelegatedToNativeScrollView;
+#else
+    return DelegatedScrollingMode::NotDelegated;
+#endif
+}
+
+void UnifiedPDFPlugin::scrollbarStyleChanged(WebCore::ScrollbarStyle, bool forceUpdate)
+{
+    if (!forceUpdate)
+        return;
+
+    if (m_hasBeenDestroyed)
+        return;
+
+    updateLayout();
+}
+
+void UnifiedPDFPlugin::updateScrollbars()
+{
+    PDFPluginBase::updateScrollbars();
+
+    bool hasHorizontalScrollbar = !!m_horizontalScrollbar;
+    bool hasVerticalScrollbar = !!m_verticalScrollbar;
+    bool showsScrollCorner = hasHorizontalScrollbar && hasVerticalScrollbar && !m_verticalScrollbar->isOverlayScrollbar();
+    updateOverflowControlsLayers(hasHorizontalScrollbar, hasVerticalScrollbar, showsScrollCorner);
+    positionOverflowControlsLayers();
 }
 
 void UnifiedPDFPlugin::updateScrollingExtents()
@@ -460,6 +689,7 @@ void UnifiedPDFPlugin::updateScrollingExtents()
     auto& scrollingCoordinator = *page->scrollingCoordinator();
     scrollingCoordinator.setScrollingNodeScrollableAreaGeometry(m_scrollingNodeID, *this);
 
+    // FIXME: Use setEventRegionToLayerBounds().
     EventRegion eventRegion;
     auto eventRegionContext = eventRegion.makeContext();
     eventRegionContext.unite(FloatRoundedRect(FloatRect({ }, size())), *m_element->renderer(), m_element->renderer()->style());
